# emudbg

./: .gitmodules  CMakeLists.txt  CPU.hpp  README.md  Registers.hpp  Structs.hpp  XState.hpp  asm_function.asm  emudbg.cpp
.github/workflows/: cmake-windows.yml
headers/: CPU.hpp  PE.hpp  SaveRVA.hpp
libs/: zydis_wrapper_d.lib
